# DNAView

./: Cargo.toml  README.md  config.toml
sequences/: Human_mitochondria_DNA.dna.txt
src/: app.rs  config.rs  dna.rs  main.rs
src/renderer/: camera.rs  mesh.rs  mod.rs  primitives.rs  selection.rs
