[package]
name = "dnaview"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.15", features = ["derive"] }
cgmath = "0.18"
egui = "0.27"
egui-wgpu = "0.27"
egui-winit = "0.27"
env_logger = "0.11"
log = "0.4"
pollster = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
wgpu = "0.19"
winit = "0.29"
